Archive2/27/6dabb78977df1d/output
main.cpp: In instantiation of 'Base<T>::Base() [with T = Derived]':
main.cpp:28:8:   required from here
main.cpp:9:49: error: invalid use of void expression
         std::call_once(flag_, T::register_all() );
                                                 ^
